--- a/src/styles/MyHeader.css
+++ b/src/styles/MyHeader.css
@@ -2,6 +2,7 @@
   text-align: center;
   border-bottom: 2px solid grey;
   background-color: white;
+  width: 100%;
 }
 .main-heading {
   text-decoration: none;
